--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<header class="text-center container jumbotron">
 		<h1>Train your brain!</h1>
 	</header>
-	<section class="container text-center">
+	<section class="container text-center jumbotron">
 		<h2>Simple exercises</h2></br>
-		<div class="row text-center">
+		<div class="row text-center bg-info">
 			<div class="col-md-3 col-xs-12">	
-				<div class="row">	
+				<div class="row ">	
 					<div id = "simple_add" class="col-md-6 col-xs-6 text-right"></div>
 					<div id = "result_add" class="col-md-2 col-xs-6 text-left "></div>
 					<div class="col-md-4 col-xs-12">
@@ -60,7 +60,14 @@
 			</div>
 		</div>
 	</section>
-	<section class="container-fluid brown">
+	<section class="container bg-danger jumbotron">
+		<div class="col-md-3 col-xs-12">
+			<div class="row">
+				<input type="text" id="ifPrime">
+				<button id="buttonPrima" class="btn btn-primary"><span class="glyphicon glyphicon-check"></span></button><br>
+				<span id="infoPrima">YES or NO? </span>
+			</div>
+		</div>
 	
 	</section>
 
